[gd_scene load_steps=21 format=3 uid="uid://p8cdn8e3xtmf"]

[ext_resource type="PackedScene" uid="uid://dtigaui88h6l6" path="res://scenes/tower.tscn" id="1_b3cv0"]
[ext_resource type="Script" path="res://tests/animation_display.gd" id="1_nu41s"]
[ext_resource type="PackedScene" uid="uid://vi2ics6occsg" path="res://scenes/catapult.tscn" id="2_sndji"]
[ext_resource type="PackedScene" uid="uid://x26q7qdg4au2" path="res://models/body.glb" id="3_73vjd"]
[ext_resource type="PackedScene" uid="uid://cegrpr2kcqr58" path="res://models/squid.glb" id="4_b8m5d"]
[ext_resource type="PackedScene" uid="uid://cn0pfh287771g" path="res://models/world.glb" id="5_i84aw"]
[ext_resource type="PackedScene" uid="uid://2yu6c20k7w34" path="res://scenes/water.tscn" id="6_vrxcw"]
[ext_resource type="PackedScene" uid="uid://b7c1u4kp7yxj1" path="res://scenes/tree.tscn" id="8_r64ot"]
[ext_resource type="Texture2D" uid="uid://cj15vph2e62my" path="res://textures/FullMoon.png" id="9_xylyl"]
[ext_resource type="Texture2D" uid="uid://cr2ajoy28surp" path="res://textures/full_moon_emission.png" id="10_mwssa"]
[ext_resource type="Texture2D" uid="uid://d34j4vd71isuw" path="res://textures/night_sky.jpg" id="11_8wrq4"]
[ext_resource type="Script" path="res://tests/soap_bubble_test.gd" id="12_q424k"]
[ext_resource type="MeshLibrary" uid="uid://dk6tf4hoyfqlk" path="res://scenes/grid_mesh_library.res" id="13_os16c"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xcqek"]
transparency = 1
albedo_texture = ExtResource("9_xylyl")
emission_enabled = true
emission = Color(0.975264, 0.731004, 0.592991, 1)
emission_texture = ExtResource("10_mwssa")
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_4q1fk"]
material = SubResource("StandardMaterial3D_xcqek")
size = Vector2(10, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b4p7a"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.481789, 0.481789, 0.481789, 1)
albedo_texture = ExtResource("11_8wrq4")

[sub_resource type="QuadMesh" id="QuadMesh_k6o0x"]
material = SubResource("StandardMaterial3D_b4p7a")
size = Vector2(100, 100)

[sub_resource type="Animation" id="Animation_w1mtq"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_og0x1"]
resource_name = "sky_rotate_animation"
length = 360.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 6.28319, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 360)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqfl0"]
_data = {
"RESET": SubResource("Animation_w1mtq"),
"sky_rotate_animation": SubResource("Animation_og0x1")
}

[node name="AnimationDisplay" type="Node3D"]
script = ExtResource("1_nu41s")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.707107, -0.353553, 0.612372, 0, 0.866025, 0.5, -0.707107, 0.353553, -0.612372, 0, 3, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.30064e-08, -0.178871, 0.983873, -7.8187e-09, 0.983873, 0.178871, -1, 0, -4.37114e-08, 1.9047, 1.33741, 0.0109306)

[node name="Tower" parent="." instance=ExtResource("1_b3cv0")]
transform = Transform3D(0.0456648, 0, -0.0203647, 0, 0.05, 0, 0.0203647, 0, 0.0456648, 1.49268, 1.01926, -0.15758)

[node name="tower" parent="Tower" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="BubbleGenerator" parent="Tower/tower" index="2"]
transform = Transform3D(0.117356, 0, 0, 0, 1.73721, -0.0704586, 0, 1.30421, 0.0938506, 1.88432, 2.77034, 0)

[node name="Propeller" parent="Tower/tower" index="4"]
transform = Transform3D(0.0872723, 0, 0, 0, 0.388829, 1.13528, 0, -0.291914, 1.51219, 0.518709, 6.01705, 0.00427979)

[node name="Catapult" parent="." instance=ExtResource("2_sndji")]
transform = Transform3D(0.0379312, 0, 0.0325765, 0, 0.05, 0, -0.0325765, 0, 0.0379312, 1.50759, 1.03135, 0.289283)

[node name="catapult" parent="Catapult" index="5"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, -6.93663, 0, -0.819513)

[node name="body" parent="." instance=ExtResource("3_73vjd")]
transform = Transform3D(0.980834, 0.190826, 0.0393773, -0.190673, 0.981624, -0.00765488, -0.0401144, 0, 0.999195, 1.20083, -0.156921, 0.237702)

[node name="Skeleton3D" parent="body/Armature" index="0"]
bones/0/rotation = Quaternion(-0.0698051, -0.135721, 0.512637, 0.844932)
bones/0/scale = Vector3(1, 1, 1)
bones/1/rotation = Quaternion(-0.0436696, 0.152358, 0.201352, 0.966611)
bones/1/scale = Vector3(1, 1, 1)
bones/2/rotation = Quaternion(0.180815, -0.0373085, -0.611153, 0.769679)
bones/3/rotation = Quaternion(-0.124511, 0.0537992, -0.0563289, 0.989156)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(-0.213696, 0.0586855, -0.0512182, 0.97379)
bones/4/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(-0.213696, 0.0586855, -0.0512182, 0.97379)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(-0.22313, 0.0591795, -0.0506467, 0.971672)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.184997, 0.0571556, -0.0529201, 0.979647)
bones/7/scale = Vector3(1, 1, 1)

[node name="body2" parent="." instance=ExtResource("3_73vjd")]
transform = Transform3D(0.607688, 0.775099, -0.173024, -0.745471, 0.63184, 0.212254, -0.273842, -2.394e-08, -0.961775, -0.117101, 0.0775627, -0.352572)

[node name="Skeleton3D" parent="body2/Armature" index="0"]
bones/0/rotation = Quaternion(-0.0698051, -0.135721, 0.512637, 0.844932)
bones/0/scale = Vector3(1, 1, 1)
bones/1/rotation = Quaternion(-0.0436696, 0.152358, 0.201352, 0.966611)
bones/1/scale = Vector3(1, 1, 1)
bones/2/rotation = Quaternion(0.180815, -0.0373085, -0.611153, 0.769679)
bones/3/rotation = Quaternion(-0.124511, 0.0537992, -0.0563289, 0.989156)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(-0.213696, 0.0586855, -0.0512182, 0.97379)
bones/4/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(-0.213696, 0.0586855, -0.0512182, 0.97379)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(-0.22313, 0.0591795, -0.0506467, 0.971672)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.184997, 0.0571556, -0.0529201, 0.979647)
bones/7/scale = Vector3(1, 1, 1)

[node name="world" parent="." instance=ExtResource("5_i84aw")]

[node name="Water" parent="." instance=ExtResource("6_vrxcw")]

[node name="Tree" parent="." instance=ExtResource("8_r64ot")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.8728, -6.37458, 0)

[node name="squid" parent="." instance=ExtResource("4_b8m5d")]
transform = Transform3D(0.00880599, 0, 0.0996115, 0, 0.1, 0, -0.0996115, 0, 0.00880599, 0.819889, 1.00883, 0)

[node name="Skeleton3D" parent="squid/SquidArmature" index="0"]
bones/0/rotation = Quaternion(-0.496338, 0.0132656, 0.234393, 0.835783)
bones/0/scale = Vector3(1, 1, 1)
bones/1/rotation = Quaternion(-0.0135679, -0.00362998, -0.0592646, 0.998143)
bones/3/rotation = Quaternion(0.439217, -0.0278431, -0.0231376, 0.897651)
bones/4/rotation = Quaternion(-0.437846, -0.351165, -0.331032, 0.758546)
bones/5/rotation = Quaternion(0.0780394, 0.00863505, -0.0462066, 0.995842)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(-0.171568, -0.526362, -0.548408, 0.626703)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(0.351719, 0.0381786, 0.252826, 0.900508)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(0.113599, -0.654897, -0.537016, 0.519441)
bones/9/rotation = Quaternion(0.0744221, 0.0246239, 0.0220568, 0.996679)
bones/9/scale = Vector3(1, 1, 1)
bones/10/rotation = Quaternion(-0.396831, 0.762884, 0.377869, -0.343145)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(0.151298, -0.0042526, 0.421937, 0.893902)
bones/12/rotation = Quaternion(-0.521866, 0.812609, 0.170139, -0.195895)
bones/13/rotation = Quaternion(0.074396, 0.0428325, 0.0675181, 0.994018)
bones/14/rotation = Quaternion(-0.52316, 0.835758, -0.166118, 0.0147436)
bones/15/rotation = Quaternion(-0.0389356, -0.00872576, 0.30881, 0.950286)
bones/15/scale = Vector3(1, 1, 1)

[node name="AnimationPlayer" parent="squid" index="4"]
speed_scale = 0.2

[node name="Moon" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.497, 10.8277, -7.75001)
mesh = SubResource("QuadMesh_4q1fk")

[node name="NightSky" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -51.0312, -11.48, -9.24232)
mesh = SubResource("QuadMesh_k6o0x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="NightSky"]
libraries = {
"": SubResource("AnimationLibrary_dqfl0")
}
autoplay = "sky_rotate_animation"

[node name="WiggleTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="WiggleTimer2" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="SoapBubbleTest" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.09436, 0.637294, 0.256455)
script = ExtResource("12_q424k")

[node name="Timer" type="Timer" parent="SoapBubbleTest"]
wait_time = 0.2
autostart = true

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.977046, 0)
mesh_library = ExtResource("13_os16c")
cell_size = Vector3(0.1, 0.1, 0.1)
cell_scale = 1.32
data = {
"cells": PackedInt32Array(65535, 65535, 0, 65535, 0, 0, 0, 0, 0, 0, 1, 0, 65535, 1, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 0, 2, 0, 65535, 2, 0, 0, 65535, 0, 0, 65534, 0, 0, 65533, 0, 0, 65532, 0, 0, 65531, 0, 0, 65530, 0, 0, 65529, 0, 65530, 1, 0, 65535, 65529, 0, 65535, 65530, 0, 65535, 65531, 0, 65535, 65532, 0, 65535, 65533, 0, 65535, 65534, 0, 65535, 8, 0, 65535, 7, 0, 65535, 6, 0, 0, 3, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 9, 1, 0, 8, 1, 0, 7, 1, 0, 3, 1, 0, 2, 1, 0, 65532, 1, 0, 65531, 1, 0, 65529, 1, 0, 65528, 1, 0, 65527, 1, 0, 65526, 1, 0, 65525, 1, 0, 65524, 1, 0, 1, 65534, 0, 1, 65533, 0, 1, 65532, 0, 1, 65531, 0, 1, 65530, 0, 1, 65529, 0, 2, 65529, 0, 3, 65529, 0, 4, 65529, 0, 5, 65529, 0, 6, 65529, 0, 7, 65529, 0, 8, 65529, 0, 8, 65530, 0, 9, 65530, 0, 10, 65530, 0, 11, 65530, 0, 12, 65530, 0, 12, 65531, 0, 13, 65531, 0, 14, 65531, 0, 14, 65532, 0, 15, 65532, 0, 15, 65533, 0, 16, 65533, 0, 16, 65534, 0, 15, 65534, 0, 15, 65535, 0, 14, 65535, 0, 12, 65534, 0, 8, 65535, 0, 7, 0, 0, 4, 0, 0, 3, 0, 0, 2, 0, 0, 8, 0, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 16, 0, 0, 16, 65535, 0, 14, 65533, 0, 13, 65533, 0, 13, 65532, 0, 12, 65532, 0, 11, 65532, 0, 11, 65531, 0, 10, 65531, 0, 9, 65531, 0, 7, 65530, 0, 6, 65530, 0, 5, 65530, 0, 4, 65530, 0, 3, 65530, 0, 2, 65530, 0, 2, 65531, 0, 3, 65531, 0, 4, 65531, 0, 5, 65531, 0, 6, 65531, 0, 7, 65532, 0, 8, 65532, 0, 8, 65531, 0, 7, 65531, 0, 6, 65532, 0, 5, 65532, 0, 4, 65532, 0, 3, 65532, 0, 2, 65532, 0, 11, 65533, 0, 10, 65532, 0, 9, 65532, 0, 2, 65533, 0, 3, 65533, 0, 4, 65533, 0, 5, 65533, 0, 6, 65533, 0, 12, 65533, 0, 13, 65534, 0, 14, 65534, 0, 14, 0, 0, 15, 0, 0, 13, 0, 0, 9, 65535, 0, 5, 65534, 0, 4, 65534, 0, 3, 65534, 0, 2, 65534, 0, 2, 65535, 0, 3, 65535, 0, 4, 65535, 0, 65519, 65535, 0, 65520, 0, 0, 65518, 1, 0, 65519, 1, 0, 65520, 1, 0, 65518, 0, 0, 65519, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65531, 65535, 0, 65530, 65535, 0, 65529, 65535, 0, 65528, 65535, 0, 65527, 65535, 0, 65526, 65535, 0, 65520, 65535, 0, 65518, 65535, 0, 65518, 65534, 0, 65519, 65534, 0, 65520, 65534, 0, 65521, 65534, 0, 65522, 65534, 0, 65523, 65534, 0, 65526, 65534, 0, 65527, 65534, 0, 65528, 65534, 0, 65529, 65534, 0, 65530, 65534, 0, 65531, 65534, 0, 65534, 65533, 0, 65530, 65533, 0, 65529, 65533, 0, 65528, 65533, 0, 65527, 65533, 0, 65523, 65533, 0, 65522, 65533, 0, 65521, 65533, 0, 65520, 65533, 0, 65520, 65532, 0, 65521, 65532, 0, 65522, 65532, 0, 65523, 65532, 0, 65533, 65532, 0, 65534, 65532, 0, 65534, 65531, 0, 65533, 65531, 0, 65525, 65531, 0, 65524, 65531, 0, 65523, 65531, 0, 65522, 65531, 0, 65522, 65530, 0, 65523, 65530, 0, 65524, 65530, 0, 65525, 65530, 0, 65526, 65530, 0, 65527, 65530, 0, 65528, 65530, 0, 65529, 65530, 0, 65530, 65530, 0, 65531, 65530, 0, 65532, 65530, 0, 65533, 65530, 0, 65534, 65530, 0, 65534, 65529, 0, 65533, 65529, 0, 65532, 65529, 0, 65531, 65529, 0, 65530, 65529, 0, 65529, 65529, 0, 65528, 65529, 0, 65527, 65529, 0, 65526, 65529, 0, 65525, 65529, 0, 65533, 65528, 0, 65531, 65528, 0, 65532, 65528, 0, 65534, 65528, 0, 65535, 65528, 0, 0, 65528, 0, 1, 65528, 0, 2, 65528, 0, 3, 65528, 0, 4, 65528, 0, 5, 65528, 0, 65532, 2, 0, 65531, 2, 0, 65530, 2, 0, 65529, 2, 0, 65527, 2, 0, 65526, 2, 0, 65525, 2, 0, 65524, 2, 0, 65523, 2, 0, 65522, 2, 0, 65521, 2, 0, 65520, 2, 0, 65519, 2, 0, 65518, 2, 0, 65528, 2, 0, 65519, 3, 0, 65520, 3, 0, 65521, 3, 0, 65522, 3, 0, 65523, 3, 0, 65524, 3, 0, 65525, 3, 0, 65526, 3, 0, 65527, 3, 0, 65528, 3, 0, 65529, 3, 0, 65530, 3, 0, 65531, 3, 0, 65532, 3, 0, 65520, 4, 0, 65521, 4, 0, 65522, 4, 0, 65523, 4, 0, 65524, 4, 0, 65525, 4, 0, 65526, 4, 0, 65527, 4, 0, 65528, 4, 0, 65529, 4, 0, 65530, 4, 0, 65531, 4, 0, 65532, 4, 0, 65533, 4, 0, 65534, 5, 0, 65533, 5, 0, 65532, 5, 0, 65531, 5, 0, 65530, 5, 0, 65529, 5, 0, 65528, 5, 0, 65527, 5, 0, 65526, 5, 0, 65525, 5, 0, 65524, 5, 0, 65523, 5, 0, 65522, 5, 0, 65524, 6, 0, 65525, 6, 0, 65526, 6, 0, 65527, 6, 0, 65528, 6, 0, 65529, 6, 0, 65530, 6, 0, 65531, 6, 0, 65532, 6, 0, 65533, 6, 0, 65534, 6, 0, 65527, 7, 0, 65528, 7, 0, 65529, 7, 0, 65530, 7, 0, 65531, 7, 0, 65532, 7, 0, 65533, 7, 0, 65534, 7, 0, 65532, 8, 0, 65533, 8, 0, 65534, 8, 0, 1, 8, 0, 2, 8, 0, 3, 8, 0, 7, 7, 0, 6, 7, 0, 5, 7, 0, 4, 7, 0, 3, 7, 0, 2, 7, 0, 1, 7, 0, 12, 6, 0, 11, 6, 0, 10, 6, 0, 9, 6, 0, 8, 6, 0, 7, 6, 0, 6, 6, 0, 5, 6, 0, 4, 6, 0, 3, 6, 0, 2, 6, 0, 1, 6, 0, 14, 5, 0, 13, 5, 0, 12, 5, 0, 11, 5, 0, 9, 5, 0, 8, 5, 0, 7, 5, 0, 6, 5, 0, 5, 5, 0, 4, 5, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 16, 4, 0, 15, 4, 0, 14, 4, 0, 13, 4, 0, 12, 4, 0, 10, 5, 0, 10, 3, 0, 9, 3, 0, 7, 3, 0, 6, 3, 0, 2, 3, 0, 1, 3, 0, 3, 2, 0, 2, 2, 0, 6, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 17, 1, 0, 17, 0, 0, 17, 65535, 0, 17, 65534, 0, 17, 65533, 0, 16, 65532, 0, 15, 65531, 0, 13, 65530, 0, 14, 65530, 0, 12, 65529, 0, 11, 65529, 0, 10, 65529, 0, 9, 65529, 0, 9, 65528, 0, 8, 65528, 0, 7, 65528, 0, 6, 65528, 0, 65528, 65528, 0, 65529, 65528, 0, 65530, 65528, 0, 65527, 65528, 0, 8, 3, 0, 7, 2, 0, 65521, 65531, 0, 65519, 65533, 0, 65519, 65532, 0, 65520, 65531, 0, 65524, 65529, 0, 65533, 65527, 0, 65534, 65527, 0, 65535, 65527, 0, 0, 65527, 0, 1, 65527, 0, 2, 65527, 0, 65526, 0, 0, 9, 0, 0, 65518, 65533, 0, 65519, 65531, 0, 65521, 65530, 0, 65523, 65529, 0, 65526, 65528, 0, 65532, 65527, 0, 3, 65527, 0, 4, 8, 0, 8, 7, 0, 9, 7, 0, 65531, 8, 0, 65526, 7, 0, 65523, 6, 0, 65521, 5, 0, 65519, 4, 0, 65517, 1, 0, 65517, 65535, 0, 65517, 65534, 0, 65517, 0, 0, 18, 1, 0, 18, 0, 0, 18, 65535, 0, 18, 65534, 0, 65531, 65527, 0, 65530, 65527, 0, 65529, 65527, 0, 65525, 65528, 0, 65524, 65528, 0, 65522, 65529, 0, 65520, 65530, 0, 65518, 65532, 0, 4, 65527, 0, 5, 65527, 0, 6, 65527, 0, 7, 65527, 0, 10, 65528, 0, 11, 65528, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 11, 7, 0, 10, 7, 0, 65528, 8, 0, 65529, 8, 0, 65530, 8, 0, 65524, 7, 0, 65525, 7, 0, 65521, 6, 0, 65522, 6, 0, 65520, 5, 0, 65518, 3, 0, 8, 65527, 0, 65528, 65527, 0, 65527, 65527, 0, 65523, 65528, 0, 65521, 65529, 0, 65519, 65530, 0, 65518, 65531, 0, 65516, 65534, 0, 65517, 65533, 0, 65517, 65532, 0, 65516, 65535, 0, 65516, 0, 0, 65516, 1, 0, 65517, 2, 0, 65517, 3, 0, 65518, 4, 0, 65519, 5, 0, 65523, 7, 0, 65527, 8, 0, 12, 65528, 0, 9, 65527, 0, 13, 65529, 0, 14, 65529, 0, 15, 65530, 0, 16, 65530, 0, 16, 65531, 0, 17, 65531, 0, 17, 65532, 0, 18, 65532, 0, 18, 65533, 0, 19, 65534, 0, 19, 65535, 0, 19, 0, 0, 19, 1, 0, 18, 2, 0, 18, 3, 0, 17, 3, 0, 17, 4, 0, 15, 5, 0, 16, 5, 0, 14, 6, 0, 13, 6, 0, 12, 7, 0, 9, 8, 0, 65532, 65535, 0, 65532, 65534, 0, 65532, 65533, 0, 65531, 65532, 0, 65530, 65532, 0, 65530, 65531, 0, 65529, 65531, 0, 65528, 65531, 0, 65528, 65532, 0, 65527, 65532, 0, 65526, 65532, 0, 65526, 65531, 0, 65527, 65531, 0, 65525, 65532, 0, 65524, 65532, 0, 65525, 65533, 0, 65524, 65533, 0, 65524, 65534, 0, 65524, 65535, 0, 65523, 65535, 0, 65522, 65535, 0, 65522, 0, 0, 65521, 0, 0, 65521, 1, 0, 65522, 1, 0, 65523, 1, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65531, 65531, 0, 65532, 65531, 0, 65533, 65533, 0, 65533, 65534, 0, 65533, 65535, 0, 65534, 0, 0, 65533, 0, 0, 65533, 1, 0, 65533, 2, 0, 65534, 3, 0, 65534, 2, 0, 0, 4, 0, 0, 5, 0, 65535, 5, 0, 65534, 4, 0, 65535, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 1, 5, 0, 2, 5, 0, 4, 4, 0, 4, 3, 0, 4, 2, 0, 4, 1, 0, 5, 1, 0, 5, 2, 0, 5, 3, 0, 7, 65534, 0, 8, 65534, 0, 6, 1, 0, 5, 0, 0, 5, 65535, 0, 6, 65535, 0, 7, 65535, 0, 11, 0, 0, 11, 65535, 0, 11, 65534, 0, 10, 65534, 0, 10, 65535, 0, 12, 0, 0, 13, 65535, 0, 10, 65533, 0, 9, 65533, 0, 3, 3, 0)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[connection signal="timeout" from="WiggleTimer" to="." method="_on_wiggle_timer_timeout"]
[connection signal="timeout" from="WiggleTimer2" to="." method="_on_wiggle_timer_2_timeout"]
[connection signal="timeout" from="SoapBubbleTest/Timer" to="SoapBubbleTest" method="_on_timer_timeout"]

[editable path="Tower"]
[editable path="Tower/tower"]
[editable path="Catapult"]
[editable path="Catapult/catapult"]
[editable path="body"]
[editable path="body2"]
[editable path="squid"]
